--- a/bin/feedr.ini
+++ b/bin/feedr.ini
@@ -1,11 +1,12 @@
 [twitter]
-oauth_key = 
+oauth_key =
 oauth_secret =
 consumer_key =
-consumer_secret = 
+consumer_secret =
 
 [sqlite]
-db_path = 
+db_path =
 
 [feeds]
-feedlist = 
+feedlist =
+timeout = 10
